Fix an issue that download file is not deleted when clicking Replace button

When enqueueing a file to Android DownloadManager, we delete the file if
user choose to overwrite.
But when using Chrome's network stack, we didn't remove the file.
This will reduce user's sdcard space during download.
And it also causes issues when user try to resume the download.
This CL deletes the file when user clicks the "Replace File" button.

BUG=602721

Review URL: https://codereview.chromium.org/1884783002

Cr-Commit-Position: refs/heads/master@{#387368}

Former-commit-id: c0258fd32bb4bda3ab721d426c3c4a73177af861